Ajustes necessários na página de dentistas

--- a/public/login.html
+++ b/public/login.html
@@ -16,9 +16,9 @@
           <img src="/img/favIcon-img.avif" alt="" class="header-img">
       
           <a href="/" class="header-btn">Home</a>
-          <a href="/dentistas" class="header-btn">Dentistas</a>
-          <a href="/login" class="header-btn">Login</a>
-          <a href="/calendario" class="header-btn">Minhas Consultas</a>
+          <a href="/dentistas.html" class="header-btn">Dentistas</a>
+          <a href="/login.html" class="header-btn">Login</a>
+          <a href="/calendario.html" class="header-btn">Minhas Consultas</a>
         </nav>
       </header>
 
