Ajustes necessários na página de dentistas

--- a/public/calendario.html
+++ b/public/calendario.html
@@ -21,6 +21,8 @@
     </nav>
   </header>
 
+  <div class="if-usuario"></div>
+
   <div class="calendario">
     <div class="cabecalho">
       <button id="mesAnterior" class="btn">&lt;</button>
