Ajustes necessários na página de dentistas

--- a/calendario.html
+++ b/calendario.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendario</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favIcon-img.avif"/>
-    <link rel="stylesheet" href="/css/geral.css">
-    <link rel="stylesheet" href="/css/calendario.css">
+    <link rel="shortcut icon" type="image/jpg" href="./public/img/favIcon-img.avif"/>
+    <link rel="stylesheet" href="./public/css/geral.css">
+    <link rel="stylesheet" href="./public/css/calendario.css">
 </head>
 <body>
     
   <header class="header">
     <nav class="header-navegacao">
-      <img src="/img/favIcon-img.avif" alt="" class="header-img">
+      <img src="./public/img/favIcon-img.avif" alt="" class="header-img">
   
       <a href="/" class="header-btn">Home</a>
       <a href="/dentistas.html" class="header-btn">Dentistas</a>
@@ -45,6 +45,6 @@
   
   
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.46.1/dist/umd/supabase.min.js"></script>
-  <script type='module' src="/js/calendario.js"></script>
+  <script type='module' src="./public/js/calendario.js"></script>
 </body>
 </html>
