--- a/consulta.html
+++ b/consulta.html
@@ -1,17 +1,17 @@
-<!DOCTYPE ejs>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consultas</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favIcon-img.avif"/>
-    <link rel="stylesheet" href="/css/consulta.css">
+    <link rel="shortcut icon" type="image/jpg" href="./public/img/favIcon-img.avif"/>
+    <link rel="stylesheet" href="./public/css/consulta.css">
 </head>
 <body>
 
   <header class="header">
     <nav class="header-navegacao">
-      <img src="/img/favIcon-img.avif" alt="" class="header-img">
+      <img src="./public/img/favIcon-img.avif" alt="" class="header-img">
       <a href="/" class="header-btn">Home</a>
       <a href="/dentistas.html" class="header-btn">Dentistas</a>
       <a href="/login.html" class="header-btn">Login</a>
@@ -34,8 +34,8 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.46.1/dist/umd/supabase.min.js"></script>
-<script type="module" src="/banco/banco.js"></script>
-<script type='module' src="/js/consulta.js"></script>
+<script type="module" src="./public/banco/banco.js"></script>
+<script type='module' src="./public/js/consulta.js"></script>
 
 </body>
 </html>
