--- a/dentistas.html
+++ b/dentistas.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dentistas</title>
-    <link rel="stylesheet" href="/css/geral.css">
-    <link rel="stylesheet" href="/css/dentista.css">
+    <link rel="stylesheet" href="./public/css/geral.css">
+    <link rel="stylesheet" href="./public/css/dentista.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     
     <header class="header">
         <nav class="header-navegacao">
-          <img src="/img/favIcon-img.avif" alt="" class="header-img">
+          <img src="./public/img/favIcon-img.avif" alt="" class="header-img">
           <a href="/" class="header-btn">Home</a>
           <a href="/dentistas.html" class="header-btn">Dentistas</a>
           <a href="/login.html" class="header-btn">Login</a>
@@ -26,8 +27,8 @@
       </section>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.46.1/dist/umd/supabase.min.js"></script>
-<script type="module" src="/Banco/banco.js"></script>
-<script type="module" src="/js/dentistas.js"></script>
+<script type="module" src="./public/Banco/banco.js"></script>
+<script type="module" src="./public/js/dentistas.js"></script>
 
 </body>
 </html>
