--- a/cadastrarConsulta.html
+++ b/cadastrarConsulta.html
@@ -16,10 +16,10 @@
         <nav class="header-navegacao">
           <img src="./public/img/favIcon-img.avif" alt="" class="header-img">
       
-          <a href="/" class="header-btn">Home</a>
-          <a href="/dentistas.html" class="header-btn">Dentistas</a>
-          <a href="/login.html" class="header-btn">Login</a>
-          <a href="/calendario.html" class="header-btn">Minhas Consultas</a>
+          <a href="./index.html" class="header-btn">Home</a>
+          <a href="./dentistas.html" class="header-btn">Dentistas</a>
+          <a href="./login.html" class="header-btn">Login</a>
+          <a href="./calendario.html" class="header-btn">Minhas Consultas</a>
         </nav>
       </header>
 
